图片显示在同一页面中

--- a/html_restul/templates/index.html
+++ b/html_restul/templates/index.html
@@ -11,6 +11,7 @@
             <input type="file" size="600" name="photo"/>
             <br>
             <input type="submit" value="预       测" class="button-new" style="margin-top:15px;"/>
+            <p><img src= "./predict/" alt="images"/></p>
             </form>
         </div>
     </body>
